<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_field_required">Field required</string>
	<string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="app_name">Purchase Order Status</string>
    <string name="action_settings">Settings</string>
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>
    <string name="login">Login</string>
    <string name="title_activity_poview">Purchase Order View</string>
    <string name="title_activity_polist">Purchase Order List</string>
    <string name="poList">poList</string>
    <string name="main_no_items">No items to display</string>
    <string name="download_pdf">View Report</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="rejectReason">Reject reason&#8230;</string>
    <string name="save">Save</string>
    <string name="title_activity_pdf_download">Report</string>
    <string name="vendor_label">Vendor:</string>
    <string name="blank_vendor_data">No vendor data on file.</string>
    <string name="blank_buyer">No buyer on file.</string>
    <string name="blank_payment_terms">No payment terms on file.</string>
    <string name="blank_fob_point">No FOB on file.</string>
    <string name="blank_shipping_terms">No shipping terms on file.</string>
    <string name="blank_ship_via">No shipping info on file.</string>
    <string name="blank_fullfillment_date">No date on file.</string>
    <string name="blank_ship_to">No shipping info on file.</string>
    <string name="shipToLabel">Ship To:</string>
    <string name="buyerLabel">Buyer:</string>
    <string name="paymentTerms">Payment Terms:</string>
    <string name="fobPoint">FOB Point:</string>
    <string name="shippingTerms">Shipping Terms:</string>
    <string name="shipVia">Ship Via:</string>
    <string name="fullfillmentDateLabel">Fullfillment Date:</string>
    <string name="blank_items">No items.</string>
    <string name="blank_total_price"></string>
    <string name="title_activity_query_service">QueryService</string>
    <string name="title_activity_query_receiver">Query Receiver</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ACCOUNT_TYPE">Account Type</string>
    <string name="login_error"></string>
    <string name="refresh">Refresh</string>
    <string name="refresh_progress">Grabbing information from database&#8230;</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_host_label">Host:</string>
    <string name="blank_host">ex: 10.0.2.2:8080/FishbowlConnect</string>

</resources>
