<!-- ?xml version="1.0" encoding="utf-8"? -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <Button
        android:id="@+id/download_pdf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_pdf" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textAlignment="center" >

        <RadioButton
            android:id="@+id/approve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/approve" />

        <RadioButton
            android:id="@+id/reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:freezesText="true"
            android:text="@string/reject" />
    </RadioGroup>

    <EditText
        android:id="@+id/rejectReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:freezesText="true"
        android:hint="@string/rejectReason"
        android:visibility="gone" >
    </EditText>

</LinearLayout>